fix: content jumping sideways when modal open

--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,11 @@
     themes: all;
 };
 
+.no-scrollbar::-webkit-scrollbar {
+    display: none;
+}
+
+.no-scrollbar {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
